Fix Jekyll config

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,8 @@
 future:      true
 lsi:         false
-highlighter: true
+highlighter: pygments
 markdown:    kramdown
 permalink:   /:title.html
-
-maruku:
-  use_tex:    false
-  use_divs:   true
 
 rdiscount:
   extensions: []
